--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: goldengoose
   labels:
     app: goldengoose
+  annotations:
+    prometheus.io/scrape: true
 spec:
   type: LoadBalancer
   ports:
