--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: goldengoose
   annotations:
-    prometheus.io/scrape: true
+    prometheus.io/scrape: "true"
 spec:
   type: LoadBalancer
   ports:
