Add scrape annotation

--- a/deploy/baseline.yaml
+++ b/deploy/baseline.yaml
@@ -14,6 +14,9 @@ spec:
       labels:
         app: goldengoose
         track: baseline
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: 8000
     spec:
       containers:
       - name: goldengoose
