--- a/deploy/baseline.yaml
+++ b/deploy/baseline.yaml
@@ -16,7 +16,7 @@ spec:
         track: baseline
       annotations:
         prometheus.io/scrape: "true"
-        prometheus.io/port: 8000
+        prometheus.io/port: "8000"
     spec:
       containers:
       - name: goldengoose
