--- a/deploy/canary.yaml
+++ b/deploy/canary.yaml
@@ -9,11 +9,13 @@ spec:
     matchLabels:
       app: goldengoose
       track: canary
+      traffic: mirror
   template:
     metadata:
       labels:
         app: goldengoose
         track: canary
+        traffic: mirror
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8000"
