--- a/charts/goldengoose/Chart.yaml
+++ b/charts/goldengoose/Chart.yaml
@@ -1,5 +1,4 @@
-name: REPLACE_ME_APP_NAME
+name: goldengoose
 description: A Helm chart for Kubernetes
 apiVersion: v1
 version: 0.1.0-SNAPSHOT
-icon: https://raw.githubusercontent.com/jenkins-x/jenkins-x-platform/d273e09/images/nodejs.png
