--- a/charts/goldengoose/values.yaml
+++ b/charts/goldengoose/values.yaml
@@ -45,7 +45,7 @@ canary:
   host: ""
 
 service:
-  name: REPLACE_ME_APP_NAME
+  name: goldengoose
   type: ClusterIP
   externalPort: 80
   internalPort: 8000
@@ -57,7 +57,7 @@ resources:
     cpu: 400m
     memory: 256Mi
   requests:
-    cpu: 200m
+    cpu: 100m
     memory: 128Mi
 probePath: /
 livenessProbe:
