--- a/charts/goldengoose/templates/gateway.yaml
+++ b/charts/goldengoose/templates/gateway.yaml
@@ -21,7 +21,7 @@ spec:
       protocol: HTTPS
     tls:
       mode: SIMPLE
-      credentialName: {{ .Values.service.name }}-tls
+      credentialName: {{ .Values.gateway.credentialName }}
     hosts:
     - {{ .Values.service.name }}{{ .Values.jxRequirements.ingress.namespaceSubDomain }}{{ .Values.jxRequirements.ingress.domain }}
 {{- end }}
