--- a/charts/goldengoose/templates/virtual-service.yaml
+++ b/charts/goldengoose/templates/virtual-service.yaml
@@ -14,4 +14,6 @@ spec:
     route:
     - destination:
         host: {{ .Values.service.name }}
+        port:
+          number: {{ .Values.service.externalPort }}
 {{- end }}
