--- a/charts/goldengoose/templates/service.yaml
+++ b/charts/goldengoose/templates/service.yaml
@@ -8,6 +8,8 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 {{- if .Values.service.annotations }}
   annotations:
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.service.name }}{{ .Values.jxRequirements.ingress.namespaceSubDomain }}{{ .Values.jxRequirements.ingress.domain }}
+    external-dns.alpha.kubernetes.io/target: {{ .Values.gateway.hostnameTarget }}
 {{ toYaml .Values.service.annotations | indent 4 }}
 {{- end }}
 spec:
