--- a/charts/goldengoose/templates/service.yaml
+++ b/charts/goldengoose/templates/service.yaml
@@ -18,5 +18,5 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ .Values.service.name }}
 {{- end }}
