--- a/charts/goldengoose/templates/canary.yaml
+++ b/charts/goldengoose/templates/canary.yaml
@@ -2,7 +2,7 @@
 apiVersion: flagger.app/v1beta1
 kind: Canary
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.service.name }}
   labels:
     draft: {{ default "draft-app" .Values.draft }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -11,19 +11,19 @@ spec:
   targetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ template "fullname" . }}
+    name: {{ .Values.service.name }}
   progressDeadlineSeconds: {{ .Values.canary.progressDeadlineSeconds }}
   {{- if .Values.hpa.enabled }}
   autoscalerRef:
     apiVersion: autoscaling/v2beta1
     kind: HorizontalPodAutoscaler
-    name: {{ template "fullname" . }}
+    name: {{ .Values.service.name }}
   {{- end }}
   service:
     port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     gateways:
-    - {{ template "fullname" . }}
+    - istio-system/istio-ingressgateway
     hosts:
     - {{ .Values.canary.host | default (printf "%s%s%s"  .Values.service.name .Values.jxRequirements.ingress.namespaceSubDomain .Values.jxRequirements.ingress.domain) }}
   analysis:
