--- a/charts/goldengoose/templates/virtual-service.yaml
+++ b/charts/goldengoose/templates/virtual-service.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.jxRequirements.ingress.domain) (not .Values.knativeDeploy) }}
+{{- if and (.Values.jxRequirements.ingress.domain) (not (or .Values.knativeDeploy .Values.canary.enabled)) }}
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
