--- a/charts/goldengoose/values.yaml
+++ b/charts/goldengoose/values.yaml
@@ -40,6 +40,9 @@ canary:
       latency:
         threshold: 500
         interval: "1m"
+      notFoundPercentage:
+        threshold: 0
+        interval: "1m"
   # The host is using Istio Gateway or the underlying ingress mechanism
   # This value is defaulted from the environments jx-requirements.yml ingress configuration
   host: ""
