--- a/charts/goldengoose/templates/deployment.yaml
+++ b/charts/goldengoose/templates/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app: {{ .Values.service.name }}
-{{- if .Values.hpa.enabled }}
+{{- if or .Values.hpa.enabled .Values.canary.enabled }}
 {{- else }}
   replicas: {{ .Values.replicaCount }}
 {{- end }}
