--- a/charts/goldengoose/templates/canary.yaml
+++ b/charts/goldengoose/templates/canary.yaml
@@ -32,7 +32,7 @@ spec:
     timeout: 5s
     metadata:
       type: cmd
-      cmd: "hey -z 1m -q 10 -c 2 -h2 https://{{ .Values.service.name }}{{ .Values.jxRequirements.ingress.namespaceSubDomain }}{{ .Values.jxRequirements.ingress.domain }}"
+      cmd: "hey -z {{ .Values.canary.analysis.interval }} -q 10 -c 2 -h2 https://{{ .Values.service.name }}{{ .Values.jxRequirements.ingress.namespaceSubDomain }}{{ .Values.jxRequirements.ingress.domain }}"
   analysis:
     interval: {{ .Values.canary.analysis.interval }}
     threshold: {{ .Values.canary.analysis.threshold }}
