--- a/charts/goldengoose/templates/canary.yaml
+++ b/charts/goldengoose/templates/canary.yaml
@@ -46,4 +46,20 @@ spec:
       thresholdRange:
         max: {{ .Values.canary.analysis.metrics.latency.threshold }}
       interval: {{ .Values.canary.analysis.metrics.latency.interval | quote }}
+---
+apiVersion: networking.istio.io/v1beta1
+kind: ServiceEntry
+metadata:
+  name: {{ .Values.service.name }}{{ .Values.jxRequirements.ingress.namespaceSubDomain }}{{ .Values.jxRequirements.ingress.domain }}
+spec:
+  exportTo:
+  - .
+  hosts:
+  - {{ .Values.service.name }}{{ .Values.jxRequirements.ingress.namespaceSubDomain }}{{ .Values.jxRequirements.ingress.domain }}
+  location: MESH_EXTERNAL
+  ports:
+  - name: https
+    number: 443
+    protocol: https
+  resolution: DNS
 {{- end }}
