--- a/charts/goldengoose/templates/canary.yaml
+++ b/charts/goldengoose/templates/canary.yaml
@@ -51,5 +51,5 @@ spec:
       timeout: 5s
       metadata:
         type: cmd
-        cmd: "hey -z {{ .Values.canary.analysis.interval }} -q 10 -c 2 -h2 https://{{ .Values.service.name }}.{{ .Release.Namespace }}:{{ .Values.service.externalPort }}"
+        cmd: "hey -z {{ .Values.canary.analysis.interval }} -q 10 -c 2 -h2 http://{{ .Values.service.name }}.{{ .Release.Namespace }}:{{ .Values.service.externalPort }}"
 {{- end }}
