--- a/.lighthouse/triggers.yaml
+++ b/.lighthouse/triggers.yaml
@@ -3,16 +3,13 @@ kind: TriggerConfig
 spec:
   presubmits:
   - name: pr
-    context: "pr"
     always_run: true
-    optional: false
-    trigger: "/test"
-    rerun_command: "/retest"
-    source: "pullrequest.yaml"
+    trigger: /test
+    rerun_command: /retest
+    source: pullrequest.yaml
   postsubmits:
   - name: release
-    context: "release"
-    source: "release.yaml"
+    source: release.yaml
     branches:
-    - main
     - master
+    - ^v\d+\.\d+\.\d+$
