--- a/.lighthouse/release.yaml
+++ b/.lighthouse/release.yaml
@@ -88,7 +88,7 @@ spec:
           args:
           - --dockerfile=Dockerfile
           - --context=dir:///workspace
-          - --destination=dippynark/goldengoose:latest
+          - --destination=dippynark/goldengoose:$(params.tag)
           volumeMounts:
           - name: kaniko-secret
             mountPath: /kaniko/.docker
