--- a/.lighthouse/release.yaml
+++ b/.lighthouse/release.yaml
@@ -29,7 +29,7 @@ spec:
         - name: tag
           description: Docker image tag
         steps:
-        - name: calculate
+        - name: calculate-image-tag
           image: busybox:1.32
           command:
           - /bin/sh
